--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev:frontend": "vite --clearScreen false",
     "predev": "npx convex dev --until-success",
     "logs": "convex logs",
-    "lint": "tsc -p convex && eslint convex"
+    "lint": "tsc -p convex && biome check .",
+    "format": "biome format --write ."
   },
   "dependencies": {
     "@ai-sdk/groq": "^2.0.0",
@@ -45,7 +46,7 @@
     "zod": "3.25.76"
   },
   "devDependencies": {
-    "@eslint/js": "9.33.0",
+    "@biomejs/biome": "2.2.0",
     "@tailwindcss/typography": "0.5.16",
     "@types/node": "20.19.10",
     "@types/react": "19.1.11",
@@ -54,16 +55,12 @@
     "@xixixao/convex-typescript-plugin": "0.0.1",
     "autoprefixer": "10.4.21",
     "dotenv": "16.4.7",
-    "eslint": "9.33.0",
-    "eslint-plugin-react-hooks": "5.2.0",
-    "eslint-plugin-react-refresh": "0.4.19",
-    "globals": "16.3.0",
+    "husky": "latest",
     "npm-run-all2": "8.0.4",
     "postcss": "8.5.3",
-    "prettier": "3.6.2",
     "tailwindcss": "3.4.17",
     "typescript": "5.9.2",
-    "typescript-eslint": "8.39.1",
+    "ultracite": "5.2.5",
     "vite": "6.3.5"
   }
 }
