--- a/biome.jsonc
+++ b/biome.jsonc
@@ -5,6 +5,9 @@
     "rules": {
       "suspicious": {
         "noConsole": "warn"
+      },
+      "style": {
+        "noMagicNumbers": "warn"
       }
     }
   },
