--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,16 +1,29 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.2.0/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.2.2/schema.json",
   "extends": ["ultracite"],
   "linter": {
     "rules": {
       "suspicious": {
-        "noConsole": "warn"
+        "noConsole": "off",
+        "noUnknownAtRules": "off"
       },
       "style": {
-        "noMagicNumbers": "warn"
+        "noMagicNumbers": "off"
       }
     }
   },
+  "overrides": [
+    {
+      "includes": ["convex/**"],
+      "linter": {
+        "rules": {
+          "style": {
+            "useFilenamingConvention": "off"
+          }
+        }
+      }
+    }
+  ],
   "json": {
     "parser": {
       "allowComments": true
