--- a/package.json
+++ b/package.json
@@ -23,17 +23,6 @@
     "@convex-dev/rate-limiter": "^0.2.12",
     "@convex-dev/workflow": "^0.2.6",
     "@hookform/resolvers": "^5.0.1",
-    "@radix-ui/react-accordion": "^1.2.4",
-    "@radix-ui/react-avatar": "^1.1.10",
-    "@radix-ui/react-checkbox": "^1.1.5",
-    "@radix-ui/react-collapsible": "^1.1.12",
-    "@radix-ui/react-hover-card": "^1.1.15",
-    "@radix-ui/react-label": "^2.1.3",
-    "@radix-ui/react-scroll-area": "^1.2.10",
-    "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-toast": "^1.2.7",
-    "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
     "ai": "^5.0.28",
     "ai-elements": "^1.0.5",
@@ -44,7 +33,7 @@
     "embla-carousel-react": "^8.6.0",
     "ollama-ai-provider": "^1.2.0",
     "openai": "^5.9.0",
-    "radix-ui": "1.4.3",
+    "radix-ui": "^1.4.3",
     "react-dom": "19.1.1",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
