--- a/package.json
+++ b/package.json
@@ -41,14 +41,15 @@
     "react-router-dom": "^7.5.0",
     "react-syntax-highlighter": "^15.6.6",
     "streamdown": "^1.1.6",
-    "tailwind-merge": "^3.2.0",
-    "tailwindcss-animate": "^1.0.7",
+    "tailwind-merge": "^3.3.1",
+    "tw-animate-css": "^1.3.7",
     "use-stick-to-bottom": "^1.1.1",
     "vitest": "^3.2.4",
     "zod": "^3.25.76"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.2",
+    "@tailwindcss/postcss": "^4.1.12",
     "@tailwindcss/typography": "0.5.16",
     "@types/node": "20.19.10",
     "@types/react": "19.1.11",
@@ -56,12 +57,11 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react": "4.3.4",
     "@xixixao/convex-typescript-plugin": "0.0.1",
-    "autoprefixer": "10.4.21",
     "dotenv": "16.4.7",
     "husky": "latest",
     "npm-run-all2": "8.0.4",
     "postcss": "8.5.3",
-    "tailwindcss": "3.4.17",
+    "tailwindcss": "^4.1.12",
     "typescript": "5.9.2",
     "ultracite": "5.2.5",
     "vite": "6.3.5"
