--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "@convex-dev/rate-limiter": "^0.2.12",
     "@convex-dev/workflow": "^0.2.6",
     "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
-    "ai": "^5.0.28",
+    "ai": "^5.0.29",
     "ai-elements": "^1.0.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
