--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.5.0",
     "react-syntax-highlighter": "^15.6.6",
+    "sonner": "^2.0.7",
     "streamdown": "^1.1.6",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.7",
